# test_case_web_dev

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt  todo.txt
app/: admin.py  context_processors.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_middle_name.py  0003_alter_user_groups_alter_user_is_active_and_more.py  0004_role_alter_report_options_alter_user_groups_and_more.py  0005_role_slug.py  0006_report_address.py  0007_alter_report_address_alter_report_date_and_more.py
project/: settings.py  urls.py
project/app/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
project/app/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_middle_name.py  0003_alter_user_groups_alter_user_is_active_and_more.py
project/core/: asgi.py  settings.py  urls.py  wsgi.py
project/project/: settings.py
project/static/: login.css  styles.css
project/templates/: 404.html  base.html  daily_reports.html  main.html  main_page.html  monthly.html  monthly_reports.html  personal.html  report.html
project/templates/registration/: login.html
static/: login.css  styles.css
templates/: 404.html  base.html  daily_reports.html  monthly_detail.html  monthly_reports.html
templates/registration/: login.html
